Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-61642

WebP missing from QMovie::supportedFormats()

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.9.3
    • 5.9.1
    • Image formats
    • None

    Description

      QWebpHandler::option(Animation) returns false, because it calls ensureScanned(), which fails with the empty QBuffer created by QMovie::supportedFormats().

      qDebug() << QMovie::supportedFormats(); // ("gif", "mng")
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vgt Eirik Aavitsland
            jpnurmi J-P Nurmi
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes